Fix website dark mode font color

--- a/docs/_sass/jekyll-theme-minimal.scss
+++ b/docs/_sass/jekyll-theme-minimal.scss
@@ -30,7 +30,7 @@
 
   :root {
     --body-bg-color: #121212;
-    --body-color: #9d9d9d;
+    --body-color: #bbb;
     --h-general-color: #ddd;
     --h-2-color: #c6c6c6;
     --h-3-6-color: #b6b6b6;
